# next-resolver

./: .gitignore  README.md  index.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: node.js.yml
python/: README.md  __init__.py
types/: index.d.ts
