[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "next-resolver"
version = "0.0.2"
description = "A utility to simpify the repeated unique ID + promise dance (asyncio)."
readme = "python/README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "Andrea Giammarchi" }]
keywords = ["promise", "async", "asyncio", "unique-id", "resolver"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/WebReflection/next-resolver#readme"
Repository = "https://github.com/WebReflection/next-resolver"
Issues = "https://github.com/WebReflection/next-resolver/issues"

[tool.setuptools]
package-dir = { "next_resolver" = "python" }
packages = ["next_resolver"]
